--- a/src/main/resources/view/pages/competition/CompetitionPopup.fxml
+++ b/src/main/resources/view/pages/competition/CompetitionPopup.fxml
@@ -42,41 +42,41 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Label styleClass="label-regular" stylesheets="@css/AppLabel.css" text="Название">
+                  <Label styleClass="label-regular" stylesheets="@../../css/AppLabel.css" text="Название">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="nameTextField" maxWidth="-Infinity" prefHeight="26.0" stylesheets="@css/TextField.css" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
-                  <Label styleClass="label-regular" stylesheets="@css/AppLabel.css" text="Организатор" GridPane.columnIndex="1" GridPane.halignment="LEFT">
+                  <TextField fx:id="nameTextField" maxWidth="-Infinity" prefHeight="26.0" stylesheets="@../../css/TextField.css" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
+                  <Label styleClass="label-regular" stylesheets="@../../css/AppLabel.css" text="Организатор" GridPane.columnIndex="1" GridPane.halignment="LEFT">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="organizerTextField" maxWidth="-Infinity" prefHeight="26.0" stylesheets="@css/TextField.css" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Label styleClass="label-regular" stylesheets="@css/AppLabel.css" text="Место проведения" GridPane.rowIndex="2">
+                  <TextField fx:id="organizerTextField" maxWidth="-Infinity" prefHeight="26.0" stylesheets="@../../css/TextField.css" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label styleClass="label-regular" stylesheets="@../../css/AppLabel.css" text="Место проведения" GridPane.rowIndex="2">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="locationTextField" maxWidth="-Infinity" prefHeight="26.0" stylesheets="@css/TextField.css" GridPane.rowIndex="3" />
-                  <Label styleClass="label-regular" stylesheets="@css/AppLabel.css" text="Дата проведения" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <TextField fx:id="locationTextField" maxWidth="-Infinity" prefHeight="26.0" stylesheets="@../../css/TextField.css" GridPane.rowIndex="3" />
+                  <Label styleClass="label-regular" stylesheets="@../../css/AppLabel.css" text="Дата проведения" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <Label styleClass="label-regular" stylesheets="@css/AppLabel.css" text="Главный судья" GridPane.rowIndex="4">
+                  <Label styleClass="label-regular" stylesheets="@../../css/AppLabel.css" text="Главный судья" GridPane.rowIndex="4">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <Label styleClass="label-regular" stylesheets="@css/AppLabel.css" text="Главный секретарь" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                  <Label styleClass="label-regular" stylesheets="@../../css/AppLabel.css" text="Главный секретарь" GridPane.columnIndex="1" GridPane.rowIndex="4">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="mainJudgeTextField" maxWidth="-Infinity" prefHeight="26.0" stylesheets="@css/TextField.css" GridPane.rowIndex="5" />
-                  <TextField fx:id="mainSecretaryTextField" maxWidth="-Infinity" prefHeight="26.0" stylesheets="@css/TextField.css" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <TextField fx:id="mainJudgeTextField" maxWidth="-Infinity" prefHeight="26.0" stylesheets="@../../css/TextField.css" GridPane.rowIndex="5" />
+                  <TextField fx:id="mainSecretaryTextField" maxWidth="-Infinity" prefHeight="26.0" stylesheets="@../../css/TextField.css" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                   <GridPane GridPane.columnIndex="1" GridPane.rowIndex="3">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="62.400028228759766" minWidth="10.0" prefWidth="30.0" />
@@ -85,12 +85,12 @@
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="126.4000244140625" minWidth="10.0" prefWidth="108.33333129882811" />
                     </columnConstraints>
                      <children>
-                        <Label prefHeight="25.0" prefWidth="17.0" styleClass="label-regular" stylesheets="@css/AppLabel.css" text="C">
+                        <Label prefHeight="25.0" prefWidth="17.0" styleClass="label-regular" stylesheets="@../../css/AppLabel.css" text="C">
                            <font>
                               <Font size="16.0" />
                            </font>
                         </Label>
-                        <Label prefHeight="25.0" prefWidth="26.0" styleClass="label-regular" stylesheets="@css/AppLabel.css" text="по" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+                        <Label prefHeight="25.0" prefWidth="26.0" styleClass="label-regular" stylesheets="@../../css/AppLabel.css" text="по" GridPane.columnIndex="2" GridPane.halignment="CENTER">
                            <font>
                               <Font size="16.0" />
                            </font>
@@ -98,8 +98,8 @@
                               <Insets left="3.0" />
                            </padding>
                         </Label>
-                        <DatePicker fx:id="toDateDatePicker" prefHeight="26.0" prefWidth="142.0" stylesheets="@css/DatePicker.css" GridPane.columnIndex="3" />
-                        <DatePicker fx:id="fromDateDatePicker" prefHeight="26.0" prefWidth="102.0" stylesheets="@css/DatePicker.css" GridPane.columnIndex="1" />
+                        <DatePicker fx:id="toDateDatePicker" prefHeight="26.0" prefWidth="142.0" stylesheets="@../../css/DatePicker.css" GridPane.columnIndex="3" />
+                        <DatePicker fx:id="fromDateDatePicker" prefHeight="26.0" prefWidth="102.0" stylesheets="@../../css/DatePicker.css" GridPane.columnIndex="1" />
                      </children>
                      <rowConstraints>
                         <RowConstraints />
@@ -107,7 +107,7 @@
                   </GridPane>
                </children>
             </GridPane>
-            <Label styleClass="popup-header" stylesheets="@css/AppLabel.css" text="Создать/Изменить соревнование" textFill="#305ec1">
+            <Label styleClass="popup-header" stylesheets="@../../css/AppLabel.css" text="Создать/Изменить соревнование" textFill="#305ec1">
                <font>
                   <Font name="System Bold" size="26.0" />
                </font>
@@ -143,7 +143,7 @@
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Button fx:id="createCompetitionButton" mnemonicParsing="false" onAction="#createOrUpdateCompetition" stylesheets="@css/Buttons.css" text="Сохранить" textAlignment="CENTER" textFill="WHITE" GridPane.halignment="LEFT">
+                  <Button fx:id="createCompetitionButton" mnemonicParsing="false" onAction="#createOrUpdateCompetition" stylesheets="@../../css/Buttons.css" text="Сохранить" textAlignment="CENTER" textFill="WHITE" GridPane.halignment="LEFT">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -153,7 +153,7 @@
                         <String fx:value="btn-success" />
                      </styleClass>
                   </Button>
-                  <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#cancel" stylesheets="@css/Buttons.css" text="Отмена" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="LEFT">
+                  <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#cancel" stylesheets="@../../css/Buttons.css" text="Отмена" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="LEFT">
                      <font>
                         <Font size="14.0" />
                      </font>
