--- a/src/main/resources/view/pages/marksmonitor/MarksGroupPopup.fxml
+++ b/src/main/resources/view/pages/marksmonitor/MarksGroupPopup.fxml
@@ -16,8 +16,8 @@
             <Font name="System Bold" size="23.0" />
          </font>
       </Label>
-      <TextField fx:id="timeTextField" layoutX="180.0" layoutY="444.0" prefHeight="31.0" prefWidth="185.0" stylesheets="@css/TextField.css" />
-      <Button layoutX="30.0" layoutY="536.0" mnemonicParsing="false" onAction="#saving" prefHeight="37.0" stylesheets="@css/Buttons.css" text="Сохранить">
+      <TextField fx:id="timeTextField" layoutX="180.0" layoutY="444.0" prefHeight="31.0" prefWidth="185.0" stylesheets="@../../css/TextField.css" />
+      <Button layoutX="30.0" layoutY="536.0" mnemonicParsing="false" onAction="#saving" prefHeight="37.0" stylesheets="@../../css/Buttons.css" text="Сохранить">
          <font>
             <Font size="14.0" />
          </font>
@@ -26,7 +26,7 @@
             <String fx:value="btn-common" />
             <String fx:value="btn-success" />
          </styleClass></Button>
-      <Button layoutX="156.0" layoutY="536.0" mnemonicParsing="false" onAction="#cancel" stylesheets="@css/Buttons.css" text="Отменить">
+      <Button layoutX="156.0" layoutY="536.0" mnemonicParsing="false" onAction="#cancel" stylesheets="@../../css/Buttons.css" text="Отменить">
          <styleClass>
             <String fx:value="btn-common" />
             <String fx:value="btn" />
@@ -42,8 +42,8 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <TextField fx:id="lapTextField" layoutX="180.0" layoutY="393.0" prefHeight="31.0" prefWidth="185.0" stylesheets="@css/TextField.css" />
-      <Button fx:id="addInTable" layoutX="393.0" layoutY="441.0" mnemonicParsing="false" onAction="#updateTable" stylesheets="@css/Buttons.css" text="Применить">
+      <TextField fx:id="lapTextField" layoutX="180.0" layoutY="393.0" prefHeight="31.0" prefWidth="185.0" stylesheets="@../../css/TextField.css" />
+      <Button fx:id="addInTable" layoutX="393.0" layoutY="441.0" mnemonicParsing="false" onAction="#updateTable" stylesheets="@../../css/Buttons.css" text="Применить">
          <font>
             <Font size="14.0" />
          </font>
@@ -54,7 +54,7 @@
             <String fx:value="btn-hover-effect" />
          </styleClass>
       </Button>
-      <TableView fx:id="runTable" layoutX="24.0" layoutY="81.0" prefHeight="290.0" prefWidth="710.0" stylesheets="@css/table.css">
+      <TableView fx:id="runTable" layoutX="24.0" layoutY="81.0" prefHeight="290.0" prefWidth="710.0" stylesheets="@../../css/table.css">
         <columns>
           <TableColumn fx:id="selectionCheckboxColumn" prefWidth="48.0" text="Выбор" />
           <TableColumn fx:id="numberColumn" minWidth="0.0" prefWidth="21.0" text="№" />
