--- a/src/main/resources/view/pages/relayrun/CommandPopup.fxml
+++ b/src/main/resources/view/pages/relayrun/CommandPopup.fxml
@@ -19,7 +19,7 @@
          </font>
       </Label>
       <TextField fx:id="commandName" layoutX="44.0" layoutY="148.0" prefHeight="31.0" prefWidth="409.0" />
-      <Button fx:id="saveButt" layoutX="44.0" layoutY="228.0" mnemonicParsing="false" onAction="#Saving" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/AgreeButton.css" text="Сохранить" />
-      <Button fx:id="cancelButt" layoutX="199.0" layoutY="228.0" mnemonicParsing="false" onAction="#Cancel" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/DisagreeButton.css" text="Отменить" />
+      <Button fx:id="saveButt" layoutX="44.0" layoutY="228.0" mnemonicParsing="false" onAction="#Saving" prefHeight="37.0" prefWidth="131.0" stylesheets="@../../css/AgreeButton.css" text="Сохранить" />
+      <Button fx:id="cancelButt" layoutX="199.0" layoutY="228.0" mnemonicParsing="false" onAction="#Cancel" prefHeight="37.0" prefWidth="131.0" stylesheets="@../../css/DisagreeButton.css" text="Отменить" />
    </children>
 </AnchorPane>
