--- a/src/main/resources/view/pages/start/StartPage.fxml
+++ b/src/main/resources/view/pages/start/StartPage.fxml
@@ -48,7 +48,7 @@
                            <font>
                               <Font size="14.0" />
                            </font></Label>
-                        <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="322.0" stylesheets="@css/TextField.css" GridPane.columnIndex="1">
+                        <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="322.0" stylesheets="@../../css/TextField.css" GridPane.columnIndex="1">
                            <GridPane.margin>
                               <Insets right="30.0" />
                            </GridPane.margin></TextField>
@@ -68,21 +68,21 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Button contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#RemoveRows" stylesheets="@css/Buttons.css" text="Удалить" textAlignment="RIGHT" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                  <Button contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#RemoveRows" stylesheets="@../../css/Buttons.css" text="Удалить" textAlignment="RIGHT" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                      <styleClass>
                         <String fx:value="btn" />
                         <String fx:value="btn-common" />
                         <String fx:value="btn-danger" />
                      </styleClass>
                   </Button>
-                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="79.0" layoutY="16.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#editRun" stylesheets="@css/Buttons.css" text="Редактировать" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="79.0" layoutY="16.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#editRun" stylesheets="@../../css/Buttons.css" text="Редактировать" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                      <styleClass>
                         <String fx:value="btn" />
                         <String fx:value="btn-warning" />
                         <String fx:value="btn-common" />
                      </styleClass>
                   </Button>
-                  <Button fx:id="createRun_button" mnemonicParsing="false" onAction="#AddRun" stylesheets="@css/Buttons.css" text="Создать старт" textAlignment="CENTER" textFill="WHITE">
+                  <Button fx:id="createRun_button" mnemonicParsing="false" onAction="#AddRun" stylesheets="@../../css/Buttons.css" text="Создать старт" textAlignment="CENTER" textFill="WHITE">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -94,7 +94,7 @@
                   </Button>
                </children>
             </GridPane>
-            <TableView fx:id="startTable" prefHeight="419.0" stylesheets="@css/table.css" GridPane.rowIndex="1">
+            <TableView fx:id="startTable" prefHeight="419.0" stylesheets="@../../css/table.css" GridPane.rowIndex="1">
                <columns>
                   <TableColumn fx:id="namestartColumn" prefWidth="175.0" reorderable="false" text="Название" />
                   <TableColumn fx:id="categoryColumn" prefWidth="170.0" reorderable="false" text="Категория" />
